k8s/monitoring-prometheus-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: prometheus
  labels:
    app: safe-lens
    component: monitoring
spec:
  type: ClusterIP
  selector:
    app: safe-lens
    component: prometheus
  ports:
    - name: http
      protocol: TCP
      port: 9090
      targetPort: 9090
