k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: safe-lens
  labels:
    app: safe-lens
  annotations:
    spec.ingressClassName: haproxy
    haproxy.org/ssl-redirect: "true"
    haproxy.org/ssl-redirect-code: "301"
    haproxy.org/forwarded-for: "true"
    hpc.nyu.edu/access: "public"
spec:
  rules:
    - host: safe-lens.users.hsrn.nyu.edu
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: frontend
                port:
                  number: 80
